tests/snapshots/examples_fixtures/io__aoc_day10_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day10_part1.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/io/aoc_day10_part1.flx:160:1
    |
160 | let lines = read_lines("examples/io/aoc_day10.txt")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/io/aoc_day10_part1.flx:160:1
    |
160 | let lines = read_lines("examples/io/aoc_day10.txt")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/io/aoc_day10_part1.flx:163:1
    |
163 | print(sum(presses))
    | ^^^^^^^^^^^^^^^^^^^
    | ------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 3 errors.
== stdout ==
<not executed>
